# Competitive-Programming

./: .gitignore  template.cpp
Advent of Code/: CMakeLists.txt
AtCoder/Educational DP Contest/: CMakeLists.txt  V-Subtree  V2.out  X R - Walk.cpp  X S - Digit Sum.cpp  X T - Permutation.cpp  X U - Grouping.cpp  X V - Subtree.cpp  X Y - Grid 2.cpp  Y A - Frog 1.cpp  Y B - Frog 2.cpp  Y C - Vacation.cpp  Y D - Knapsack 1.cpp  Y E - Knapsack 2.cpp  Y F - LCS.cpp  Y H - Grid 1.cpp  Y I - Coins.cpp  Y J - Sushi.cpp  Y K - Stones.cpp  Y M - Candies.cpp  Y O - Matching.cpp  Y P - Independent Set.cpp  Y S - Digit Sum.cpp  Y V - Subtree.cpp  Y Z - Frog 3.cpp  Y_J_-_Sushi
AtCoder/X ARC 109/: CMakeLists.txt
AtCoder/X Beginner Contest 166/: CMakeLists.txt
BOI/: CMakeLists.txt
CEOI/: CMakeLists.txt
CSES/: .clang-format  1.in  1.out  CMakeLists.txt  Y 1. Distinct Numbers  a  a.cpp  ans1.txt  b  b.cpp  b.in  b.out  c  c.cpp  c.in  c.out  d  d.cpp  d.in  d.out  e  e.cpp  e.out  gen_a  gen_a.cpp  in1.txt  in2.txt  stress.cpp
CSES/X 1. Introductory Problems/: 13.out  Gray_Code  Two_Knights  X 13. Gray Code.cpp  X 18. Digit Queries.cpp  X 19. Grid Paths.cpp  X_18_Digit_Queries  Y 1. Weird Algorithm.cpp  Y 10. Trailing Zeros.cpp  Y 11. Coin Piles.cpp  Y 12. Palindrome Reorder.cpp  Y 13. Gray Code.cpp  Y 14. Tower of Hanoi.cpp  Y 15. Creating Strings I.cpp  Y 16. Apple Division.cpp  Y 17. Chessboard and Queens.cpp  Y 2. Missing Number.cpp  Y 3. Repetitions.cpp  Y 4. Increasing Array.cpp  Y 5. Permutations.cpp  Y 6. Number Spiral.cpp  Y 7. Two Knights.cpp  Y 8. Two Sets.cpp  Y 9. Bit Strings.cpp  Y_13_Gray_Code  Y_14_Tower_of_Hanoi
CSES/X 10. Advanced Techniques/: Y 1. Meet in the Middle.cpp  Y 6. Cut and Paste.cpp  Y 7. Substring Reversals.cpp  Y_1_Meet_in_the_Middle  Y_6_Cut_and_Paste  Y_7_Substring_Reversals
CSES/X 11. Additional Problems/: 44.in  53.out  65.in  65.out  7.out  73.out  8.out  Maximum_Building_I  Multiplication_Table  Stick_Divisions  X 3. Swap Game.cpp  X 47. Course Schedule II.cpp  X 65. Stick Divisions.cpp  X 66. Coding Company.cpp  X 7. Even Outdegree Edges.cpp  X_65_Coding_Company  Y 17. Graph Girth.cpp  Y 18. Intersection Points.cpp  Y 24. Increasing Subsequence II.cpp  Y 26. Bit Inversions.cpp  Y 31. Maximum Building I.cpp  Y 31.in  Y 44. Coin Grid.cpp  Y 53. Empty String.cpp  Y 65. Coding Company.cpp  Y 65. Stick Divisions.cpp  Y 7. Even Outdegree Edges.cpp  Y 73. Permutations II.cpp  Y 8. Multiplication Table.cpp  Y_18_Intersection_Points  Y_44_Coin_Grid  Y_53_Empty_String  Y_73_Permutations_II  Y_7_Even_Outdegree_Edges
CSES/X 2. Sorting and Searching/: 12.out  18.out  25.out  X 33. Sliding Cost.cpp  Y 1. Distinct Numbers.cpp  Y 10. Missing Coin Sum.cpp  Y 11. Collecting Numbers.cpp  Y 12. Collecting Numbers II.cpp  Y 13. Playlist.cpp  Y 14. Towers.cpp  Y 15. Traffic Lights.cpp  Y 16. Josephus Problem I.cpp  Y 17. Josephus Problem II.cpp  Y 18. Nested Ranges Check.cpp  Y 19. Nested Ranges Count.cpp  Y 2. Apartments.cpp  Y 20. Room Allocation.cpp  Y 21. Factory Machines.cpp  Y 22. Tasks and Deadlines.cpp  Y 23. Reading Books.cpp  Y 24. Sum of Three Values.cpp  Y 25. Sum of Four Values.cpp  Y 26. Nearest Smaller Values.cpp  Y 27. Subarray Sums I.cpp  Y 28. Subarray Sums II.cpp  Y 29. Subarray Divisibility.cpp  Y 3. Ferris Wheel.cpp  Y 30. Subarray Distinct Values.cpp  Y 31. Array Division.cpp  Y 32. Sliding Median.cpp  Y 34. Movie Festival II.cpp  Y 35. Maximum Subarray Sum II.cpp  Y 4. Concert Tickets.cpp  Y 5. Restaurant Customers.cpp  Y 6. Movie Festival.cpp  Y 7. Sum of Two Values.cpp  Y 8. Maximum Subarray Sum.cpp  Y 9. Stick Lengths.cpp  Y_10_Missing_Coin_Sum  Y_11_Collecting_Numbers  (+7 more)
CSES/X 3. Dynamic Programming/: 19.out  Increasing_Subsequence  X 57. Increasing Subsequence.cpp  Y 10. Edit Distance.cpp  Y 14. Two Sets II.cpp  Y 15. Increasing Subsequence.cpp  Y 17. Elevator Rides.cpp  Y 19. Counting Numbers.cpp  Y 44. Dice Combinations.cpp  Y 45. Minimizing Coins.cpp  Y 46. Coin Combinations I.cpp  Y 47. Coin Combinations II.cpp  Y 48. Removing Digits.cpp  Y 49. Grid Paths.cpp  Y 50. Book Shop.cpp  Y 51. Array Description.cpp  Y 54. Money Sums.cpp  Y 55. Removal Game.cpp  Y 56. Two Sets II.cpp
CSES/X 4. Graph Algorithms/: 12.out  20.in  20.out  25.out  High_Score  Monsters  Planets_Cycles  Round_Trip  X 10. High Score.cpp  X 10.in  X 12. Cycle Finding.cpp  X 13. Flight Routes.cpp  X 20. Planets Queries II.cpp  X 25. Planets and Kingdoms.cpp  X_12_Cycle_Finding  (+47 more)
Google Competitions/: CMakeLists.txt
ICPC/: CMakeLists.txt  c  d  g  test  test_a
IOI/: CMakeLists.txt
POI/: CMakeLists.txt
Project Euler C++/: 306.out  CMakeLists.txt  X 100. Arranged probability.cpp  X 164. Numbers for which no three consecutive digits have a sum greater than a given value.cpp  X 281. Pizza Toppings.cpp  X 281. Pizza Toppings.py  X 51. Prime digit replacements.cpp  X 700. Eulercoin.cpp  X_100_Arranged_probability  X_164_Numbers_for_which_no_three_consecutive_digits_have_a_sum_greater_than_a_given_value  X_700_Eulercoin  Y 1. Multiples of 3 and 5  Y 1. Multiples of 3 and 5.cpp  Y 10. Summation of primes.cpp  Y 102. Triangle containment.cpp  Y 102.txt  Y 107. Minimal network.cpp  Y 107.txt  Y 112. Bouncy numbers.cpp  Y 113. Non-bouncy numbers.cpp  Y 114. Counting block combinations I.cpp  Y 115. Counting block combinations II.cpp  Y 116. Red green or blue tiles.cpp  Y 117. Red green and blue tiles .cpp  Y 120. Square remainders.cpp  Y 121. Disc game prize fund.cpp  Y 123. Prime square remainders.cpp  Y 124. Ordered radicals.cpp  Y 145. How many reversible numbers are there below one-billion.cpp  Y 173. Using up to one million tiles how many different hollow square laminae can be formed.cpp  Y 174. Counting the number of hollow square laminae that can form one two three ... distinct arrangements.cpp  Y 186. Connectedness of a network.cpp  Y 187. Semiprimes.cpp  Y 2. Even Fibonacci numbers.cpp  Y 205. Dice Game.cpp  Y 3. Largest prime factor.cpp  Y 301. Nim.cpp  Y 306. Paper-strip Game.cpp  Y 345. Matrix Sum.cpp  Y 345.txt  (+57 more)
SPOJ/: CMakeLists.txt
mBIT/: CMakeLists.txt
(+9699 files in other folders)
