cmake_minimum_required(VERSION 3.17)
project(Advent_of_Code)

set(CMAKE_CXX_STANDARD 17)

add_executable(1.1 "2020/Y 1/Y 1.1.cpp")
set_target_properties(1.1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/Y 1/Y 1")
add_executable(1.2 "2020/Y 1/Y 1.2.cpp")
set_target_properties(1.2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/Y 1/Y 1")