cmake_minimum_required(VERSION 3.17)
project(BOI)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
#set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
add_executable(tracks "X 2013/X Day 2/Y B. Tracks in the Snow/tracks.cpp")
set_target_properties(tracks PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 2013/X Day 2/Y B. Tracks in the Snow")
add_executable(village "X 2020/X Day 2/X B. Village/village.cpp")
set_target_properties(village PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 2020/X Day 2/X B. Village")
add_executable(lisp "X 2005/X Day 1/Y B. Magic Parenthesis/lisp.cpp")
set_target_properties(lisp PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 2005/X Day 1/Y B. Magic Parenthesis")
add_executable(park "X 2016/X Day 1/X 2. Park/park.cpp")
set_target_properties(park PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 2016/X Day 1/X 2. Park")
add_executable(pcb "X 2010/X Day 1/Y C. Printed Circuit Board/pcb.cpp")
set_target_properties(pcb PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 2010/X Day 1/Y C. Printed Circuit Board")