cmake_minimum_required(VERSION 3.16)
project(CSES)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")


add_executable(Weird_Algorithm "X 1. Introductory Problems/Y 1. Weird Algorithm.cpp")
add_executable(Missing_Number "X 1. Introductory Problems/Y 2. Missing Number.cpp")
add_executable(Repetitions "X 1. Introductory Problems/Y 3. Repetitions.cpp")
add_executable(Nearest_Smaller_Values "X 2. Sorting and Searching/Y 26. Nearest Smaller Values.cpp")
add_executable(Sliding_Median "X 2. Sorting and Searching/Y 32. Sliding Median.cpp")
add_executable(Message_Route "X 4. Graph Algorithms/Y 4. Message Route.cpp")
add_executable(Counting_Rooms "X 4. Graph Algorithms/Y 1. Counting Rooms.cpp")
add_executable(Labyrinth "X 4. Graph Algorithms/Y 2. Labyrinth.cpp")
add_executable(Coin_Combinations_I  "X 3. Dynamic Programming/Y 3. Coin Combinations I.cpp")
add_executable(Coin_Combinations_II "X 3. Dynamic Programming/Y 4. Coin Combinations II.cpp")
add_executable(Minimizing_Coins "X 3. Dynamic Programming/Y 2. Minimizing Coins.cpp")
add_executable(Playlist "X 2. Sorting and Searching/Y 13. Playlist.cpp")
add_executable(Course_Schedule "X 4. Graph Algorithms/Y 15. Course Schedule.cpp")
add_executable(Longest_Flight_Route "X 4. Graph Algorithms/Y 16. Longest Flight Route.cpp")
add_executable(Round_Trip_II "X 4. Graph Algorithms/Y 14. Round Trip II.cpp")
add_executable(Game_Routes "X 4. Graph Algorithms/Y 17. Game Routes.cpp")
add_executable(Shortest_Routes_I "X 4. Graph Algorithms/Y 8. Shortest Routes I.cpp")
add_executable(Flight_Discount "X 4. Graph Algorithms/Y 11. Flight Discount.cpp")
add_executable(Shortest_Routes_II "X 4. Graph Algorithms/Y 9. Shortest Routes II.cpp")
add_executable(Building_Roads "X 4. Graph Algorithms/Y 3. Building Roads.cpp")
add_executable(Increasing_Array "X 1. Introductory Problems/Y 4. Increasing Array.cpp")
add_executable(Permutations "X 1. Introductory Problems/Y 5. Permutations.cpp")
add_executable(Flight_Routes "X 4. Graph Algorithms/X 13. Flight Routes.cpp")
add_executable(Building_Teams "X 4. Graph Algorithms/Y 5. Building Teams.cpp")
add_executable(Bit_Strings "X 1. Introductory Problems/Y 9. Bit Strings.cpp")
add_executable(Distinct_Numbers "X 2. Sorting and Searching/Y 1. Distinct Numbers.cpp")
add_executable(Trailing_Zeros "X 1. Introductory Problems/Y 10. Trailing Zeros.cpp")
add_executable(Counting_Divisors "X 7. Mathematics/Y 4. Counting Divisors.cpp")
add_executable(Coin_Piles "X 1. Introductory Problems/Y 11. Coin Piles.cpp")
add_executable(Maximum_Subarray_Sum "X 2. Sorting and Searching/Y 8. Maximum Subarray Sum.cpp")
add_executable(Sum_of_Two_Values "X 2. Sorting and Searching/Y 7. Sum of Two Values.cpp")
add_executable(Range_Sum_Queries_I "X 5. Range Queries/Y 1. Static Range Sum Queries.cpp")
add_executable(Range_Minimum_Queries_I "X 5. Range Queries/Y 2. Static Range Minimum Queries.cpp")
add_executable(Range_Minimum_Queries_II "X 5. Range Queries/Y 4. Dynamic Range Minimum Queries.cpp")
add_executable(Range_Xor_Queries "X 5. Range Queries/Y 5. Range Xor Queries.cpp")
add_executable(Range_Update_Queries "X 5. Range Queries/Y 6. Range Update Queries.cpp")
add_executable(Reading_Books "X 2. Sorting and Searching/Y 23. Reading Books.cpp")
add_executable(Palindrome_Reorder "X 1. Introductory Problems/Y 12. Palindrome Reorder.cpp")
add_executable(Creating_Strings_I "X 1. Introductory Problems/Y 15. Creating Strings I.cpp")
add_executable(Apartments "X 2. Sorting and Searching/Y 2. Apartments.cpp")
add_executable(Concert_Tickets "X 2. Sorting and Searching/Y 4. Concert Tickets.cpp")
add_executable(Restaurant_Customers "X 2. Sorting and Searching/Y 5. Restaurant Customers.cpp")
add_executable(Dice_Combinations "X 3. Dynamic Programming/Y 1. Dice Combinations.cpp")
add_executable(Course_Schedule_II "X 11. Additional Problems/X 47. Course Schedule II.cpp")
add_executable(Investigation "X 4. Graph Algorithms/Y 18. Investigation.cpp")
add_executable(Subordinates "X 6. Tree Algorithms/Y 1. Subordinates.cpp")
add_executable(Tree_Diameter "X 6. Tree Algorithms/Y 3. Tree Diameter.cpp")
add_executable(Tree_Distances_I "X 6. Tree Algorithms/Y 4. Tree Distances I.cpp")
add_executable(Removing_Digits "X 3. Dynamic Programming/Y 5. Removing Digits.cpp")
add_executable(Grid_Paths_1 "X 3. Dynamic Programming/Y 6. Grid Paths.cpp")
add_executable(Subarray_Sums_I "X 2. Sorting and Searching/Y 27. Subarray Sums I.cpp")
add_executable(Exponentiation "X 7. Mathematics/Y 2. Exponentiation.cpp")
add_executable(Two_Sets "X 1. Introductory Problems/Y 8. Two Sets.cpp")
add_executable(Movie_Festival "X 2. Sorting and Searching/Y 6. Movie Festival.cpp")
add_executable(Road_Reparation "X 4. Graph Algorithms/Y 22. Road Reparation.cpp")
add_executable(Book_Shop "X 3. Dynamic Programming/Y 7. Book Shop.cpp")
add_executable(Road_Construction "X 4. Graph Algorithms/Y 23. Road Construction.cpp")
add_executable(Chessboard_and_Queens "X 1. Introductory Problems/Y 17. Chessboard and Queens.cpp")
add_executable(Grid_Paths_0 "X 1. Introductory Problems/X 19. Grid Paths.cpp")
add_executable(Apple_Division "X 1. Introductory Problems/Y 16. Apple Division.cpp")
add_executable(Sum_of_Three_Values "X 2. Sorting and Searching/Y 24. Sum of Three Values.cpp")
add_executable(Array_Division "X 2. Sorting and Searching/Y 31. Array Division.cpp")
add_executable(Factory_Machines "X 2. Sorting and Searching/Y 21. Factory Machines.cpp")
add_executable(Towers "X 2. Sorting and Searching/Y 14. Towers.cpp")
add_executable(Tasks_and_Deadlines "X 2. Sorting and Searching/Y 22. Tasks and Deadlines.cpp")
add_executable(Stick_Lengths "X 2. Sorting and Searching/Y 9. Stick Lengths.cpp")
add_executable(Ferris_Wheel "X 2. Sorting and Searching/Y 3. Ferris Wheel.cpp")
add_executable(Room_Allocation "X 2. Sorting and Searching/Y 20. Room Allocation.cpp")
add_executable(Money_Sums "X 3. Dynamic Programming/Y 12. Money Sums.cpp")
add_executable(Flight_Routes_Check "X 4. Graph Algorithms/Y 24. Flight Routes Check.cpp")
add_executable(Planets_Queries_I "X 4. Graph Algorithms/Y 19. Planets Queries I.cpp")
add_executable(Array_Description "X 3. Dynamic Programming/Y 8. Array Description.cpp")
add_executable(Graph_Girth "X 11. Additional Problems/Y 17. Graph Girth.cpp")
add_executable(Traffic_Lights "X 2. Sorting and Searching/Y 15. Traffic Lights.cpp")
add_executable(Bit_Inversions "X 11. Additional Problems/Y 26. Bit Inversions.cpp")
add_executable(Subarray_Sums_II "X 2. Sorting and Searching/Y 28. Subarray Sums II.cpp")
add_executable(Subarray_Divisibility "X 2. Sorting and Searching/Y 29. Subarray Divisibility.cpp")
add_executable(Forest_Queries "X 5. Range Queries/Y 7. Forest Queries.cpp")
add_executable(Tree_Distances_II "X 6. Tree Algorithms/Y 5. Tree Distances II.cpp")
add_executable(Movie_Festival_II "X 2. Sorting and Searching/Y 34. Movie Festival II.cpp")
add_executable(Stick_Divisions "X 11. Additional Problems/X 65. Stick Divisions.cpp")
add_executable(Number_Spiral "X 1. Introductory Problems/Y 6. Number Spiral.cpp")
add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 14. Two Sets II.cpp")
add_executable(List_Removals "X 5. Range Queries/Y 9. List Removals.cpp")
add_executable(Salary_Queries "X 5. Range Queries/Y 10. Salary Queries.cpp")
add_executable(Increasing_Subsequence_II "X 11. Additional Problems/Y 24. Increasing Subsequence II.cpp")
add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 6. Company Queries I.cpp")
add_executable(Common_Divisors "X 7. Mathematics/Y 5. Common Divisors.cpp")
add_executable(Hotel_Queries "X 5. Range Queries/Y 8. Hotel Queries.cpp")
add_executable(Edit_Distance "X 3. Dynamic Programming/Y 10. Edit Distance.cpp")
add_executable(Rectangle_Cutting "X 3. Dynamic Programming/Y 11. Rectangle Cutting.cpp")
add_executable(Removal_Game "X 3. Dynamic Programming/X 13. Removal Game.cpp")
add_executable(Coding_Company "X 11. Additional Problems/X 66. Coding Company.cpp")
add_executable(Hamiltonian_Flights "X 4. Graph Algorithms/Y 31. Hamiltonian Flights.cpp")
add_executable(Maximum_Subarray_Sum_II "X 2. Sorting and Searching/Y 35. Maximum Subarray Sum II.cpp")
add_executable(Sliding_Cost "X 2. Sorting and Searching/X 33. Sliding Cost.cpp")
add_executable(Path_Queries "X 6. Tree Algorithms/Y 11. Path Queries.cpp")
add_executable(Gray_Code "X 1. Introductory Problems/X 13. Gray Code.cpp")
set_target_properties(Gray_Code PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 1. Introductory Problems")
add_executable(Monsters "X 4. Graph Algorithms/Y 7. Monsters.cpp")
set_target_properties(Monsters PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 4. Graph Algorithms")
add_executable(Round_Trip "X 4. Graph Algorithms/Y 6. Round Trip.cpp")
set_target_properties(Round_Trip PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 4. Graph Algorithms")
add_executable(Fibonacci_Numbers "X 7. Mathematics/X 18. Fibonacci Numbers.cpp")
set_target_properties(Fibonacci_Numbers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 7. Mathematics")
add_executable(Two_Knights "X 1. Introductory Problems/Y 7. Two Knights.cpp")
set_target_properties(Two_Knights PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 1. Introductory Problems")
add_executable(High_Score "X 4. Graph Algorithms/X 10. High Score.cpp")
set_target_properties(High_Score PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 4. Graph Algorithms")
add_executable(Planets_Cycles "X 4. Graph Algorithms/Y 21. Planets Cycles.cpp")
set_target_properties(Planets_Cycles PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 4. Graph Algorithms")
add_executable(Maximum_Building_I "X 11. Additional Problems/Y 31. Maximum Building I.cpp")
set_target_properties(Maximum_Building_I PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 11. Additional Problems")
add_executable(Point_Location_Test "X 9. Geometry/Y 1. Point Location Test.cpp")
set_target_properties(Point_Location_Test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 9. Geometry")
add_executable(Line_Segment_Intersection "X 9. Geometry/Y 2. Line Segment Intersection.cpp")
set_target_properties(Line_Segment_Intersection PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 9. Geometry")
add_executable(a a.cpp)
set_target_properties(a PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
target_precompile_headers(a PUBLIC "/Library/Developer/CommandLineTools/usr/include/c++/v1/bits/stdc++.h")

add_executable(Dynamic_Range_Sum_Queries "X 5. Range Queries/Y 3. Dynamic Range Sum Queries.cpp")
set_target_properties(Dynamic_Range_Sum_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 5. Range Queries")
add_executable(Distinct_Values_Queries "X 5. Range Queries/Y 14. Distinct Values Queries.cpp")
set_target_properties(Distinct_Values_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 5. Range Queries")
add_executable(Subtree_Queries "X 6. Tree Algorithms/Y 10. Subtree Queries.cpp")
set_target_properties(Subtree_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
add_executable(Company_Queries_II "X 6. Tree Algorithms/X 7. Company Queries II.cpp")
set_target_properties(Company_Queries_II PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
add_executable(Tree_Matching "X 6. Tree Algorithms/Y 2. Tree Matching.cpp")
set_target_properties(Tree_Matching PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
add_executable(Increasing_Subsequence "X 3. Dynamic Programming/Y 15. Increasing Subsequence.cpp")
set_target_properties(Increasing_Subsequence PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 3. Dynamic Programming/")