cmake_minimum_required(VERSION 3.16)

project(Google_Code_Jam)

set(CMAKE_CXX_STANDARD 14)

add_executable(Allocation "Kick Start/2020/Round A/Y 1. Allocation/Allocation.cpp")
add_executable(Vestigium "Code Jam/2020/Qualification Round/Y 1. Vestigium/Vestigium.cpp")
add_executable(Nesting_Depth "Code Jam/2020/Qualification Round/Y 2. Nesting Depth/Nesting Depth.cpp")
add_executable(Parenting_Partnering_Returns "Code Jam/2020/Qualification Round/Y 3. Parenting Partnering Returns/Parenting Partnering Returns.cpp")
add_executable(Number_Guessing "Code Jam/2018/Practice Session/Y 1. Number Guessing/Number Guessing.cpp")
add_executable(Pattern_Matching "Code Jam/2020/Round 1A/X 1. Pattern Matching/Pattern Matching.cpp")