cmake_minimum_required(VERSION 3.17)
project(POI)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
#set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
add_executable(PAR "2016/Y Parade/PAR.cpp")
set_target_properties(PAR PROPERTIES RUNTIME_OUTPUT_DIRECTORY "2016/Y Parade")
add_executable(SZP "X Spies/SZP.cpp")
set_target_properties(SZP PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X Spies")
add_executable(SAB "Y Sabotage/SAB.cpp")
set_target_properties(SAB PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Y Sabotage/Y Sabotage")
add_executable(HOT "X Hotels/HOT.cpp")
set_target_properties(HOT PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X Hotels")