cmake_minimum_required(VERSION 3.17)
project(Educational_DP_Contest)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

add_executable(A-Frog_1 "Y A - Frog 1.cpp")
add_executable(B-Frog_2 "Y B - Frog 2.cpp")
add_executable(C-Vacation "Y C - Vacation.cpp")
add_executable(D-Knapsack_1 "Y D - Knapsack 1.cpp")
add_executable(E-Knapsack_2 "Y E - Knapsack 2.cpp")
add_executable(F-LCS "Y F - LCS.cpp")
add_executable(G-Longest_Path "Y G - Longest Path.cpp")
add_executable(H-Grid_1 "Y H - Grid 1.cpp")
add_executable(I-Coins "Y I - Coins.cpp")
add_executable(J-Sushi "X J - Sushi.cpp")
add_executable(K-Stones "Y K - Stones.cpp")
add_executable(L-Deque "Y L - Deque.cpp")
add_executable(M-Candies "Y M - Candies.cpp")
add_executable(N-Slimes "Y N - Slimes.cpp")
add_executable(O-Matching "Y O - Matching.cpp")
add_executable(P-Independent_Set "Y P - Independent Set.cpp")
add_executable(Q-Flowers "Y Q - Flowers.cpp")
add_executable(R-Walk "X R - Walk.cpp")
add_executable(S-Digit_Sum "X S - Digit Sum.cpp")
add_executable(T-Permutation "X T - Permutation.cpp")
add_executable(U-Grouping "X U - Grouping.cpp")
add_executable(V-Subtree "X V - Subtree.cpp")
add_executable(W-Intervals "X W - Intervals.cpp")
add_executable(X-Tower "X X - Tower.cpp")
add_executable(Y-Grid_2 "X Y - Grid 2.cpp")
add_executable(Z-Frog_3 "X Z - Frog 3.cpp")