cmake_minimum_required(VERSION 3.16)
project(X_RC122020___RECode_12_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(RECNDSTR "Y 1. RECNDSTR - Chef and String/RECNDSTR.cpp")
add_executable(RECNDNOS "Y 2. RECNDNOS - Chef and Numbers/RECNDNOS.cpp")
add_executable(RECNDNUM "Y 3. RECNDNUM - Chef and Walk/RECNDNUM.cpp")
add_executable(RECNDROT "X 4. RECNDROT - Chef and Rotation/RECNDROT.cpp")