cmake_minimum_required(VERSION 3.17)
project(Kick_Start)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

add_executable(Allocation "2020/X Round A/Y 1. Allocation/Allocation.cpp")
set_target_properties(Allocation PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/X Round A/Y 1. Allocation")
add_executable(Candies "2020/X Round C/XY 4. Candies/Candies.cpp")
set_target_properties(Candies PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/X Round C/XY 4. Candies")
add_executable(Countdown "2020/X Round C/Y 1. Countdown/Countdown.cpp")
set_target_properties(Countdown PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/X Round C/Y 1. Countdown")
add_executable(Stable_Wall "2020/X Round C/Y 2. Stable Wall/Stable Wall.cpp")
set_target_properties(Stable_Wall PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/X Round C/Y 2. Stable Wall")
add_executable(Perfect_Subarray "2020/X Round C/XY 3. Perfect Subarray/Perfect Subarray.cpp")
set_target_properties(Perfect_Subarray PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/2020/X Round C/XY 3. Perfect Subarray")