cmake_minimum_required(VERSION 3.16)
project(X_AUG20B___August_Challenge_2020_Division_2)

set(CMAKE_CXX_STANDARD 17)
add_executable(CHEFWARS "Y 1. CHEFWARS - Chef Wars - Return of the Jedi/CHEFWARS.cpp")
add_executable(LINCHESS "Y 2. LINCHESS - Chef and Linear Chess/LINCHESS.cpp")
add_executable(CRDGAME3 "Y 3. CRDGAME3 - Another Card Game Problem/CRDGAME3.cpp")
add_executable(SKMP "Y 4. SKMP - Smallest KMP/SKMP.cpp")
add_executable(CHEFWED "Y 5. CHEFWED - Chef and Wedding Arrangements/CHEFWED.cpp")
add_executable(SUBSFREQ "X 6. SUBSFREQ - Subsequence Frequency Counting/SUBSFREQ.cpp")
if(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions("CHEFWARS" PUBLIC DEBUG=1)
    target_compile_definitions("LINCHESS" PUBLIC DEBUG=1)
    target_compile_definitions("CRDGAME3" PUBLIC DEBUG=1)
    target_compile_definitions("SKMP" PUBLIC DEBUG=1)
    target_compile_definitions("CHEFWED" PUBLIC DEBUG=1)
    target_compile_definitions("SUBSFREQ" PUBLIC DEBUG=1)
endif()