cmake_minimum_required(VERSION 3.17)
project(X_SEPT20B___September_Challenge_2020_Division_2)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

add_executable(TREE2 "Y 1. TREE2 - A Problem on Sticks/TREE2.cpp")
add_executable(ADAMAT "Y 2. ADAMAT - Ada Matrix/ADAMAT.cpp")
add_executable(COVID19B "Y 3. COVID19B - Coronavirus Spread 2/COVID19B.cpp")
add_executable(CHFNSWAP "Y 4. CHFNSWAP - Chefina and Swap/CHFNSWAP.cpp")
add_executable(correct "Y 4. CHFNSWAP - Chefina and Swap/correct.cpp")
