cmake_minimum_required(VERSION 3.16)
project(X_LTIME81___February_Lunchtime_2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(POPGATES "Y 1. POPGATES - At the Gates/POPGATES.cpp")
add_executable(NOTALLFL "X 2. NOTALLFL - Not All Flavours/NOTALLFL.cpp")
add_executable(3 "X 3./3.cpp")
add_executable(4 "X 4./4.cpp")
add_executable(5 "X 5./5.cpp")
if (CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions("POPGATES" PUBLIC DEBUG=1)
    target_compile_definitions("NOTALLFL" PUBLIC DEBUG=1)
    target_compile_definitions("3" PUBLIC DEBUG=1)
    target_compile_definitions("4" PUBLIC DEBUG=1)
    target_compile_definitions("5" PUBLIC DEBUG=1)
elseif (CMAKE_BUILD_TYPE MATCHES Release)
    target_compile_definitions("POPGATES" PUBLIC DEBUG=0)
    target_compile_definitions("NOTALLFL" PUBLIC DEBUG=0)
    target_compile_definitions("3" PUBLIC DEBUG=0)
    target_compile_definitions("4" PUBLIC DEBUG=0)
    target_compile_definitions("5" PUBLIC DEBUG=0)
endif ()