cmake_minimum_required(VERSION 3.16)
project(X_LTIME82B___March_Lunchtime_2020_Division_2__Unrated_)

set(CMAKE_CXX_STANDARD 14)

add_executable(main1 "Y 1. SWPDGT - Chef Swaps Digits/main1.cpp")
add_executable(main2 "Y 2. PRFXGD - Good Prefix/main2.cpp")
add_executable(main3 "X 3. MXMLCM - Maximize LCM/main3.cpp")